// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ChatEmptyState matches snapshot for desktop 1`] = `
<div>
  <div
    class="flex items-center justify-center py-16"
  >
    <div
      class="animate-fade-in max-w-xl text-center px-12 py-12 backdrop-blur-glass backdrop-saturate-glass shadow-apple-xl duration-base ease-out-smooth hover:shadow-apple-xl rounded-2xl border border-[var(--glass-border)] bg-[var(--glass-white)] transition-all hover:-translate-y-0.5"
    >
      <div
        class="mb-8 flex flex-col items-center justify-center"
      >
        <div
          aria-label="New Moon at 0% illumination"
          class="group relative cursor-default mb-4"
          role="img"
          style="width: 240px; height: 240px;"
        >
          <div
            class="absolute inset-0"
            style="width: 240px; height: 240px;"
          >
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 111.21197959327358px; top: 8.685754048998376px; width: 1.5px; height: 1.5px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 149.35008863683925px; top: 169.2067103071379px; width: 1.2000000000000002px; height: 1.2000000000000002px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 23.709018789505492px; top: 83.76158302235177px; width: 0.9px; height: 0.9px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 161.19075942321217px; top: 63.99040459529471px; width: 1.6px; height: 1.6px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 73.93138732190022px; top: 185.09657709355423px; width: 1.3px; height: 1.3px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 64.74976877915714px; top: 25.963379339160042px; width: 1px; height: 1px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 169.51522746632554px; top: 128.15374131984984px; width: 1.7000000000000002px; height: 1.7000000000000002px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 12.857695300552237px; top: 132.48413045886565px; width: 1.4px; height: 1.4px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 139.12875129272334px; top: 23.417098368681522px; width: 1.1px; height: 1.1px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 121.01615130058647px; top: 176.15327559935199px; width: 0.8px; height: 0.8px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 38.99386987366148px; top: 61.76059510128px; width: 1.5px; height: 1.5px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 188.5180277260141px; top: 83.73473739847404px; width: 1.2000000000000002px; height: 1.2000000000000002px;"
            />
          </div>
          <div
            class="from-slate-200/30 via-slate-300/15 absolute inset-0 rounded-full bg-radial to-transparent blur-2xl"
            style="transform: scale(1.15) translateX(-10%); opacity: 0.4;"
          />
          <div
            class="from-white/30 via-slate-100/15 absolute inset-0 rounded-full bg-radial to-transparent blur-xl"
            style="transform: scale(1.08) translateX(-8%); opacity: 0.5;"
          />
          <div
            class="from-white/40 via-slate-50/15 absolute inset-0 rounded-full bg-radial to-transparent blur-lg"
            style="transform: scale(1.02) translateX(-5%); opacity: 0.5;"
          />
          <div
            class="absolute inset-0 rounded-full bg-linear-to-br from-white/0 via-white/5 to-white/0 opacity-0 blur-md transition-opacity duration-500 group-hover:opacity-100"
            style="transform: scale(0.95);"
          />
          <svg
            class="relative z-10"
            fill="none"
            height="240"
            viewBox="0 0 200 200"
            width="240"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <filter
                height="104%"
                id="soften"
                width="104%"
                x="-2%"
                y="-2%"
              >
                <fegaussianblur
                  in="SourceGraphic"
                  stdDeviation="0.5"
                />
              </filter>
              <mask
                id="moon-mask"
              >
                <circle
                  cx="100"
                  cy="100"
                  fill="white"
                  filter="url(#soften)"
                  r="99"
                />
              </mask>
              <mask
                id="lit-mask"
              >
                <path
                  d="M 100 200
              A 100 100 0 0 1 100 0
              A 100 100 0 0 1 100 200"
                  fill="white"
                  filter="url(#soften)"
                />
              </mask>
              <radialgradient
                cx="40%"
                cy="40%"
                id="moon-sphere"
                r="60%"
              >
                <stop
                  offset="0%"
                  stop-color="#f8fafc"
                />
                <stop
                  offset="25%"
                  stop-color="#f1f5f9"
                />
                <stop
                  offset="45%"
                  stop-color="#e2e8f0"
                />
                <stop
                  offset="60%"
                  stop-color="#cbd5e1"
                />
                <stop
                  offset="75%"
                  stop-color="#94a3b8"
                />
                <stop
                  offset="85%"
                  stop-color="#64748b"
                />
                <stop
                  offset="95%"
                  stop-color="#475569"
                />
                <stop
                  offset="100%"
                  stop-color="#334155"
                />
              </radialgradient>
              <radialgradient
                cx="30%"
                cy="30%"
                id="highlight-accent"
                r="40%"
              >
                <stop
                  class="text-white/20"
                  offset="0%"
                  stop-color="currentColor"
                />
                <stop
                  class="text-white/5"
                  offset="50%"
                  stop-color="currentColor"
                />
                <stop
                  offset="100%"
                  stop-color="transparent"
                />
              </radialgradient>
              <radialgradient
                cx="50%"
                cy="50%"
                id="limb-darkening"
                r="50%"
              >
                <stop
                  offset="0%"
                  stop-color="transparent"
                />
                <stop
                  offset="60%"
                  stop-color="transparent"
                />
                <stop
                  class="text-black/5"
                  offset="80%"
                  stop-color="currentColor"
                />
                <stop
                  class="text-black/15"
                  offset="90%"
                  stop-color="currentColor"
                />
                <stop
                  class="text-black/40"
                  offset="100%"
                  stop-color="currentColor"
                />
              </radialgradient>
              <lineargradient
                id="terminator-shadow"
                x1="100%"
                x2="0%"
                y1="50%"
                y2="50%"
              >
                <stop
                  offset="0%"
                  stop-color="transparent"
                />
                <stop
                  offset="20%"
                  stop-color="transparent"
                />
                <stop
                  class="text-black/30"
                  offset="15%"
                  stop-color="currentColor"
                />
                <stop
                  class="text-black/50"
                  offset="100%"
                  stop-color="currentColor"
                />
              </lineargradient>
            </defs>
            <circle
              cx="100"
              cy="100"
              fill="#0a0a0a"
              r="100"
            />
            <g
              mask="url(#moon-mask)"
              style="filter: saturate(0.3);"
            >
              <image
                class="opacity-10"
                height="200"
                href="/moon-texture.jpg"
                preserveAspectRatio="xMidYMid slice"
                width="400"
                x="-100"
                y="0"
              />
            </g>
            <g
              mask="url(#lit-mask)"
              style="filter: brightness(1.0) saturate(0.85);"
            >
              <image
                class="opacity-90"
                height="200"
                href="/moon-texture.jpg"
                preserveAspectRatio="xMidYMid slice"
                width="400"
                x="-100"
                y="0"
              />
            </g>
            <path
              class="opacity-10"
              d="M 100 200
              A 100 100 0 0 1 100 0
              A 100 100 0 0 1 100 200"
              fill="#e2e8f0"
            />
            <path
              class="opacity-25 mix-blend-overlay"
              d="M 100 200
              A 100 100 0 0 1 100 0
              A 100 100 0 0 1 100 200"
              fill="url(#moon-sphere)"
            />
            <g
              mask="url(#lit-mask)"
            >
              <circle
                class="pointer-events-none"
                cx="100"
                cy="100"
                fill="url(#terminator-shadow)"
                r="100"
              />
            </g>
            <path
              class="pointer-events-none"
              d="M 100 200
              A 100 100 0 0 1 100 0
              A 100 100 0 0 1 100 200"
              fill="url(#highlight-accent)"
            />
            <circle
              class="pointer-events-none"
              cx="100"
              cy="100"
              fill="url(#limb-darkening)"
              r="100"
            />
          </svg>
        </div>
        <span
          class="text-muted-foreground/70 text-xs font-medium tracking-widest uppercase"
        >
          New Moon
           • 
          0
          %
           
          Illum.
        </span>
        <p
          class="animate-fade-in text-primary/70 animation-delay-300 mt-6 max-w-lg px-6 text-center text-base leading-relaxed font-light italic"
        >
          "
          moon.quote.new
          "
        </p>
      </div>
      <h2
        class="gradient-text mt-8 text-3xl tracking-tight"
      >
        Welcome to Your Therapeutic Space
      </h2>
    </div>
  </div>
</div>
`;

exports[`ChatEmptyState matches snapshot for mobile 1`] = `
<div>
  <div
    class="flex items-center justify-center py-8"
  >
    <div
      class="animate-fade-in max-w-xl text-center px-6 py-8 backdrop-blur-glass backdrop-saturate-glass shadow-apple-xl duration-base ease-out-smooth hover:shadow-apple-xl rounded-2xl border border-[var(--glass-border)] bg-[var(--glass-white)] transition-all hover:-translate-y-0.5"
    >
      <div
        class="mb-6 flex flex-col items-center justify-center"
      >
        <div
          aria-label="New Moon at 0% illumination"
          class="group relative cursor-default mb-4"
          role="img"
          style="width: 180px; height: 180px;"
        >
          <div
            class="absolute inset-0"
            style="width: 180px; height: 180px;"
          >
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 111.21197959327358px; top: 8.685754048998376px; width: 1.5px; height: 1.5px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 149.35008863683925px; top: 169.2067103071379px; width: 1.2000000000000002px; height: 1.2000000000000002px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 23.709018789505492px; top: 83.76158302235177px; width: 0.9px; height: 0.9px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 161.19075942321217px; top: 63.99040459529471px; width: 1.6px; height: 1.6px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 73.93138732190022px; top: 185.09657709355423px; width: 1.3px; height: 1.3px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 64.74976877915714px; top: 25.963379339160042px; width: 1px; height: 1px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 169.51522746632554px; top: 128.15374131984984px; width: 1.7000000000000002px; height: 1.7000000000000002px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 12.857695300552237px; top: 132.48413045886565px; width: 1.4px; height: 1.4px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 139.12875129272334px; top: 23.417098368681522px; width: 1.1px; height: 1.1px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 121.01615130058647px; top: 176.15327559935199px; width: 0.8px; height: 0.8px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 38.99386987366148px; top: 61.76059510128px; width: 1.5px; height: 1.5px;"
            />
            <div
              class="bg-primary/30 absolute rounded-full"
              style="left: 188.5180277260141px; top: 83.73473739847404px; width: 1.2000000000000002px; height: 1.2000000000000002px;"
            />
          </div>
          <div
            class="from-slate-200/30 via-slate-300/15 absolute inset-0 rounded-full bg-radial to-transparent blur-2xl"
            style="transform: scale(1.15) translateX(-10%); opacity: 0.4;"
          />
          <div
            class="from-white/30 via-slate-100/15 absolute inset-0 rounded-full bg-radial to-transparent blur-xl"
            style="transform: scale(1.08) translateX(-8%); opacity: 0.5;"
          />
          <div
            class="from-white/40 via-slate-50/15 absolute inset-0 rounded-full bg-radial to-transparent blur-lg"
            style="transform: scale(1.02) translateX(-5%); opacity: 0.5;"
          />
          <div
            class="absolute inset-0 rounded-full bg-linear-to-br from-white/0 via-white/5 to-white/0 opacity-0 blur-md transition-opacity duration-500 group-hover:opacity-100"
            style="transform: scale(0.95);"
          />
          <svg
            class="relative z-10"
            fill="none"
            height="180"
            viewBox="0 0 200 200"
            width="180"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <filter
                height="104%"
                id="soften"
                width="104%"
                x="-2%"
                y="-2%"
              >
                <fegaussianblur
                  in="SourceGraphic"
                  stdDeviation="0.5"
                />
              </filter>
              <mask
                id="moon-mask"
              >
                <circle
                  cx="100"
                  cy="100"
                  fill="white"
                  filter="url(#soften)"
                  r="99"
                />
              </mask>
              <mask
                id="lit-mask"
              >
                <path
                  d="M 100 200
              A 100 100 0 0 1 100 0
              A 100 100 0 0 1 100 200"
                  fill="white"
                  filter="url(#soften)"
                />
              </mask>
              <radialgradient
                cx="40%"
                cy="40%"
                id="moon-sphere"
                r="60%"
              >
                <stop
                  offset="0%"
                  stop-color="#f8fafc"
                />
                <stop
                  offset="25%"
                  stop-color="#f1f5f9"
                />
                <stop
                  offset="45%"
                  stop-color="#e2e8f0"
                />
                <stop
                  offset="60%"
                  stop-color="#cbd5e1"
                />
                <stop
                  offset="75%"
                  stop-color="#94a3b8"
                />
                <stop
                  offset="85%"
                  stop-color="#64748b"
                />
                <stop
                  offset="95%"
                  stop-color="#475569"
                />
                <stop
                  offset="100%"
                  stop-color="#334155"
                />
              </radialgradient>
              <radialgradient
                cx="30%"
                cy="30%"
                id="highlight-accent"
                r="40%"
              >
                <stop
                  class="text-white/20"
                  offset="0%"
                  stop-color="currentColor"
                />
                <stop
                  class="text-white/5"
                  offset="50%"
                  stop-color="currentColor"
                />
                <stop
                  offset="100%"
                  stop-color="transparent"
                />
              </radialgradient>
              <radialgradient
                cx="50%"
                cy="50%"
                id="limb-darkening"
                r="50%"
              >
                <stop
                  offset="0%"
                  stop-color="transparent"
                />
                <stop
                  offset="60%"
                  stop-color="transparent"
                />
                <stop
                  class="text-black/5"
                  offset="80%"
                  stop-color="currentColor"
                />
                <stop
                  class="text-black/15"
                  offset="90%"
                  stop-color="currentColor"
                />
                <stop
                  class="text-black/40"
                  offset="100%"
                  stop-color="currentColor"
                />
              </radialgradient>
              <lineargradient
                id="terminator-shadow"
                x1="100%"
                x2="0%"
                y1="50%"
                y2="50%"
              >
                <stop
                  offset="0%"
                  stop-color="transparent"
                />
                <stop
                  offset="20%"
                  stop-color="transparent"
                />
                <stop
                  class="text-black/30"
                  offset="15%"
                  stop-color="currentColor"
                />
                <stop
                  class="text-black/50"
                  offset="100%"
                  stop-color="currentColor"
                />
              </lineargradient>
            </defs>
            <circle
              cx="100"
              cy="100"
              fill="#0a0a0a"
              r="100"
            />
            <g
              mask="url(#moon-mask)"
              style="filter: saturate(0.3);"
            >
              <image
                class="opacity-10"
                height="200"
                href="/moon-texture.jpg"
                preserveAspectRatio="xMidYMid slice"
                width="400"
                x="-100"
                y="0"
              />
            </g>
            <g
              mask="url(#lit-mask)"
              style="filter: brightness(1.0) saturate(0.85);"
            >
              <image
                class="opacity-90"
                height="200"
                href="/moon-texture.jpg"
                preserveAspectRatio="xMidYMid slice"
                width="400"
                x="-100"
                y="0"
              />
            </g>
            <path
              class="opacity-10"
              d="M 100 200
              A 100 100 0 0 1 100 0
              A 100 100 0 0 1 100 200"
              fill="#e2e8f0"
            />
            <path
              class="opacity-25 mix-blend-overlay"
              d="M 100 200
              A 100 100 0 0 1 100 0
              A 100 100 0 0 1 100 200"
              fill="url(#moon-sphere)"
            />
            <g
              mask="url(#lit-mask)"
            >
              <circle
                class="pointer-events-none"
                cx="100"
                cy="100"
                fill="url(#terminator-shadow)"
                r="100"
              />
            </g>
            <path
              class="pointer-events-none"
              d="M 100 200
              A 100 100 0 0 1 100 0
              A 100 100 0 0 1 100 200"
              fill="url(#highlight-accent)"
            />
            <circle
              class="pointer-events-none"
              cx="100"
              cy="100"
              fill="url(#limb-darkening)"
              r="100"
            />
          </svg>
        </div>
        <span
          class="text-muted-foreground/70 text-xs font-medium tracking-widest uppercase"
        >
          New Moon
           • 
          0
          %
           
          Illum.
        </span>
        <p
          class="animate-fade-in text-primary/70 animation-delay-300 mt-6 max-w-lg px-6 text-center text-base leading-relaxed font-light italic"
        >
          "
          moon.quote.new
          "
        </p>
      </div>
      <h2
        class="gradient-text mt-8 text-3xl tracking-tight"
      >
        Welcome to Your Therapeutic Space
      </h2>
    </div>
  </div>
</div>
`;
